--- a/app/src/main/res/drawable/et_bg1.xml
+++ b/app/src/main/res/drawable/et_bg1.xml
@@ -4,8 +4,7 @@
 
     <corners android:topLeftRadius="0dp"
         android:topRightRadius="20dp"
-        android:bottomLeftRadius="20dp"
-        android:bottomRightRadius="20dp"/>
+        android:bottomLeftRadius="20dp" />
 
     <stroke android:color="@color/white"
         android:width="1dp"/>
