--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -91,14 +91,9 @@
                        android:paddingRight="15dp"
                        android:background="@drawable/et_bg"
                        android:hint="Enter Mobile Number"
-                       android:textColorHint="@color/white"/>
-
-                   <Spinner
-                       android:id="@+id/spinnerCountries"
-                       android:outlineAmbientShadowColor="@color/white"
-                       android:outlineSpotShadowColor="@color/white"
-                       android:layout_width="150dp"
-                       android:layout_height="wrap_content"/>
+                       android:textColorHint="@color/white"
+                       android:inputType="number"
+                       android:maxLength="10"/>
 
                </LinearLayout>
 
@@ -148,7 +143,9 @@
                    android:paddingRight="15dp"
                    android:background="@drawable/et_bg"
                    android:hint="Ente OTP"
-                   android:textColorHint="@color/white"/>
+                   android:textColorHint="@color/white"
+                   android:inputType="number"
+                   android:maxLength="6"/>
 
            </LinearLayout>
 
