--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,7 +10,6 @@
         android:orientation="vertical">
 
         <RelativeLayout
-            android:layout_marginBottom="5dp"
             android:layout_weight="0.35"
             android:id="@+id/rll1"
             android:layout_width="match_parent"
@@ -85,53 +84,58 @@
             android:orientation="vertical">
 
             <Button
-                android:layout_marginTop="5dp"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:layout_width="wrap_content"
+                android:layout_marginTop="3dp"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="0.55"
+                android:layout_weight="0.60"
                 android:text="Stationary"
-                android:textSize="30dp"
-                android:textAlignment="center"
+                android:textSize="28dp"
+                android:textAlignment="gravity"
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:textColor="@color/white"
                 android:fontFamily="sans-serif-medium"
-                android:background="@drawable/et_bg1"/>
+                android:background="@drawable/et_bg1"
+                android:id="@+id/buut3"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
                 android:layout_gravity="center"
-                android:layout_weight="0.4"
-                android:layout_marginLeft="40dp"
-                android:layout_marginRight="40dp">
+                android:layout_weight="0.4">
 
                 <ImageButton
-                    android:src="@drawable/pencil"
+                    android:id="@+id/img_btn1"
+                    android:padding="0dp"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="0.5"
-                    android:background="@drawable/btn_bg5"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginLeft="23dp"
-                    android:layout_marginRight="23dp"
-                    android:scaleType="fitStart"/>
+                    android:background="@drawable/defaulty"
+                    android:layout_margin="3dp"
+                    android:scaleType="fitCenter"/>
 
                 <ImageButton
+                    android:padding="0dp"
+                    android:id="@+id/img_btn2"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="0.5"
-                    android:background="@drawable/btn_bg5"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginLeft="23dp"
-                    android:layout_marginRight="23dp"
-                    android:src="@drawable/pen"
-                    android:scaleType="fitEnd"/>
+                    android:background="@drawable/defaulty"
+                    android:scaleType="centerCrop"
+                    android:layout_margin="3dp"/>
+
+                <ImageButton
+                    android:id="@+id/img_btn3"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.5"
+                    android:background="@drawable/defaulty"
+                    android:layout_margin="3dp"
+                    android:scaleType="centerCrop"
+                    android:padding="0dp"/>
 
             </LinearLayout>
 
@@ -140,36 +144,41 @@
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
                 android:layout_gravity="center"
-                android:layout_weight="0.4"
-                android:layout_marginLeft="40dp"
-                android:layout_marginRight="40dp">
+                android:layout_weight="0.4">
 
                 <ImageButton
-                    android:src="@drawable/notebook"
-                    android:scaleType="fitStart"
+                    android:id="@+id/img_btn4"
+                    android:scaleType="centerCrop"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="0.5"
-                    android:background="@drawable/btn_bg5"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginLeft="23dp"
-                    android:layout_marginRight="23dp"/>
+                    android:background="@drawable/defaulty"
+                    android:layout_margin="3dp"
+                    android:padding="0dp"/>
+
+                <ImageButton
+                    android:id="@+id/img_btn5"
+                    android:scaleType="fitCenter"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.5"
+                    android:background="@drawable/defaulty"
+                    android:layout_margin="3dp"
+                    android:padding="0dp"/>
 
                 <Button
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginLeft="23dp"
-                    android:layout_marginRight="23dp"
+                    android:layout_marginLeft="3dp"
+                    android:layout_marginRight="3dp"
                     android:layout_weight="0.5"
                     android:text="View All"
                     android:textAlignment="center"
                     android:textColor="@color/white"
                     android:textSize="22dp"
                     android:fontFamily="sans-serif-medium"
-                    android:background="@drawable/btn_bg4"/>
+                    android:background="@drawable/btn_bg4"
+                    android:id="@+id/buut4"/>
 
             </LinearLayout>
 
