Stationary Category Added 2

--- a/app/src/main/res/drawable/btn_bg4.xml
+++ b/app/src/main/res/drawable/btn_bg4.xml
@@ -10,6 +10,6 @@
     <stroke android:color="@color/white"
         android:width="1dp"/>
 
-    <solid android:color="@color/gradStop"/>
+    <solid android:color="#1A69CA"/>
 
 </shape>
