--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -14,7 +14,7 @@
             android:id="@+id/rll1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/gradStop">
+            android:background="@color/white">
 
             <ViewFlipper
                 android:id="@+id/vFlipper"
@@ -22,57 +22,23 @@
                 android:layout_height="200dp"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp" />
+                android:layout_marginBottom="5dp"
+                android:background="@drawable/defaulty"/>
 
             <ViewFlipper
                 android:id="@+id/vFlipper2"
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
                 android:layout_alignParentStart="true"
                 android:alpha="0.8"
                 android:background="@color/dark"
-                android:layout_alignParentBottom="true">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:fontFamily="cursive"
-                    android:text="Academic Books"
-                    android:textAlignment="center"
-                    android:textColor="@color/white"
-                    android:textSize="22dp"
-                    android:textStyle="italic" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="45dp"
-                    android:fontFamily="cursive"
-                    android:text="In association with Top Schools"
-                    android:textAlignment="center"
-                    android:textColor="@color/white"
-                    android:textSize="22dp"
-                    android:textStyle="italic" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="45dp"
-                    android:fontFamily="cursive"
-                    android:text="Major Stationaries"
-                    android:textAlignment="center"
-                    android:textColor="@color/white"
-                    android:textSize="22dp"
-                    android:textStyle="italic" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="45dp"
-                    android:fontFamily="cursive"
-                    android:text="Super Fast Delivery"
-                    android:textAlignment="center"
-                    android:textColor="@color/white"
-                    android:textSize="22dp" />
-
-            </ViewFlipper>
+                android:layout_alignParentBottom="true"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:fontFamily="cursive"
+                android:text="................"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="22dp"
+                android:textStyle="italic"/>
 
 
         </RelativeLayout>
@@ -91,13 +57,15 @@
                 android:layout_height="match_parent"
                 android:layout_weight="0.60"
                 android:text="Stationary"
-                android:textSize="28dp"
-                android:textAlignment="gravity"
+                android:textSize="19dp"
+                android:textStyle="bold"
+                android:gravity="center_vertical"
+                android:paddingStart="25dp"
                 android:layout_gravity="center"
-                android:gravity="center"
-                android:textColor="@color/white"
-                android:fontFamily="sans-serif-medium"
-                android:background="@drawable/et_bg1"
+                android:textAllCaps="false"
+                android:textColor="@color/darky"
+                android:fontFamily="sans-serif-thin"
+                android:background="@drawable/btn_bg6"
                 android:id="@+id/buut3"/>
 
             <LinearLayout
@@ -172,7 +140,8 @@
                     android:layout_marginLeft="3dp"
                     android:layout_marginRight="3dp"
                     android:layout_weight="0.5"
-                    android:text="View All"
+                    android:text="View All >"
+                    android:textAllCaps="false"
                     android:textAlignment="center"
                     android:textColor="@color/white"
                     android:textSize="22dp"
