--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="gradStop">#23A7D8</color>
     <color name="dark">#212226</color>
     <color name="darky">#0C3857</color>
+    <color name="black">#000000</color>
 </resources>
